
[build-system]
requires = ["setuptools>=61.0", "versioningit"]
build-backend = "setuptools.build_meta"


# ----------------------------------------- setuptools -------------------------------------------
[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true


# ----------------------------------------- Project Metadata -------------------------------------
#
[project]
version = "0.0.0.dev9"
name = "PyTester"
dependencies = [
    "ActionMan == 0.0.0.dev24",
    "PyShellMan == 0.0.0.dev15",
    "MDit == 0.0.0.dev25",
    "LoggerMan == 0.0.0.dev54",
]
requires-python = ">=3.10"
