
[build-system]
requires = ["setuptools>=61.0", "versioningit"]
build-backend = "setuptools.build_meta"


# ----------------------------------------- setuptools -------------------------------------------
[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true


# ----------------------------------------- Project Metadata -------------------------------------
#
[project]
version = "0.0.0.dev10"
name = "PyTester"
dependencies = [
    "ActionMan == 0.0.0.dev24",
    "PyShellMan == 0.0.0.dev16",
    "MDit == 0.0.0.dev26",
    "LoggerMan == 0.0.0.dev55",
]
requires-python = ">=3.10"
